--- a/recipes/french_fries.html
+++ b/recipes/french_fries.html
@@ -10,6 +10,22 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        
+        <strong><h1>Fries French Fries</h1></strong>
+        <img src="../french-fries.webp" alt="Good looking frenchy">
+        <label>Ingredients</label>
+        <ul>
+            <li>Potatoes</li>
+            <li>Onion Powder</li>
+            <li>Salt</li>
+            <li>Oil</li>
+            
+        </ul>
+        <label>Step-By-Step</label>
+        <ol>
+            <li>Cut the Potatoes.</li>
+            <li>Soak and Drain the Potatoes.</li>
+            <li>Season the French Fries.</li>
+            <li>Cook In Air Fryer.</li>
+        </ol>
     </body>
 </html>
