--- a/recipes/omelet.html
+++ b/recipes/omelet.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <strong><h1>Lasagna good Lasagna</h1></strong>
+        <strong><h1>Omelet good Omelet</h1></strong>
         <img src="../omelet.webp" alt="Good looking omelet">
         <label>Ingredients</label>
         <ul>
