--- a/recipes/omelet.html
+++ b/recipes/omelet.html
@@ -12,7 +12,7 @@
     <body>
         <strong><h1>Omelet good Omelet</h1></strong>
         <img src="../omelet.webp" alt="Good looking omelet">
-        <label>Ingredients</label>
+        <strong><p>Ingredients</p></strong>
         <ul>
             <li>Eggs</li>
             <li>Onion and garlic</li>
@@ -21,7 +21,7 @@
             <li>Spices and seasonings</li>
             
         </ul>
-        <label>Step-By-Step</label>
+        <strong><p><Step-By-Step</p></strong>
         <ol>
             <li>Beat eggs in a bowl, and stir in baby spinach and Parmesan cheese.</li>
             <li>Season with onion powder, nutmeg, salt, and pepper.</li>
